# pfhedge

./: .buildinfo  .flake8  .gitignore  LICENSE  Makefile  README.md  autogreek.html  build.py  data_hedge.ipynb  features.html  genindex.html  hedger.html  index.html  instruments.html  lint.py  nn.functional.html  nn.html  notebook5.ipynb  objects.inv  poetry.toml  pyproject.toml  search.html  searchindex.js  setup.cfg  stochastic.html  test.sh
.flexci/: config.pbtxt
.flexci/linux/: Dockerfile  build_and_push.sh  script.sh  test.sh
.github/: CONTRIBUTING.md
.github/workflows/: bump.yml  ci.yml  doc.yml  examples.yml  publish.yml  release.yml
_modules/: index.html
_modules/pfhedge/: autogreek.html  hedger.html
_modules/pfhedge/features/: _getter.html  container.html  features.html
_modules/pfhedge/instruments/: _base.html  american_binary.html  (+5 more)
_sources/: hedger.rst.txt  index.rst.txt  instruments.rst.txt  nn.functional.rst.txt  nn.rst.txt  stochastic.rst.txt
_sources/notes/: instrument_attributes.rst.txt
_static/: pygments.css
docs/: Makefile  requirements.txt
docs/notes/: american_binary.tex  european_binary.tex
docs/source/: autogreek.rst  conf.py  features.rst  hedger.rst  index.rst  instruments.rst  nn.functional.rst  nn.rst  stochastic.rst
examples/: example_adding_clause.py  example_autogreek.py  example_black_scholes.py  example_expected_shortfall.py  example_hedging_variance_swap.py  example_heston_iv.py  example_knockout.py  example_minimal.py  example_module_output.py  example_multi_layer_perceptron.py  example_multi_layer_perceptrons.py  example_multiple_hedge.py  example_no_transaction_band.py  example_plot_american_binary.py  example_plot_european.py  example_plot_european_binary.py  example_plot_lookback.py  example_quasi_random.py  example_readme.ipynb  example_readme.py  example_svi.py  example_whalley_wilmott.py  getting_started.html  requirements.txt
notes/: adding_clause.html  instrument_attributes.html
pfhedge/: __init__.py  autogreek.py  hedger.py
pfhedge/_utils/: bisect.py  doc.py  hook.py  lazy.py  operations.py  parse.py  str.py  testing.py  typing.py
pfhedge/features/: __init__.py  _base.py  _getter.py  _register_features.py  container.py  features.py  functional.py
pfhedge/instruments/: __init__.py  _base.py  american_binary.py  base.py  european.py  european_binary.py  lookback.py  underlier.py
pfhedge/nn/: __init__.py  functional.py
pfhedge/stochastic/: __init__.py  _utils.py  brownian.py  cir.py  engine.py  heston.py  kou_jump.py  local_volatility.py  marton_jump.py  marton_jump_model.py  merton_jump.py  random.py  rbergomi.py  rough_bergomi.py  vasicek.py
tests/: test_autogreek.py  test_examples.py  test_hedger.py  test_version.py
tests/_utils/: test_bisect.py  test_lazy.py  test_operations.py  test_parse.py
tests/features/: test_features.py  test_getter.py
tests/instruments/: test_american_binary.py  test_european.py  test_european_binary.py  test_lookback.py  test_underlier.py
tests/nn/: test_functional.py
tests/stochastic/: test_brownian.py  test_cir.py  test_heston.py  test_jump.py  test_kou_jump.py  test_marton_jump.py  test_merton_jump.py  test_randn.py  test_rbergomi.py  test_rough_bergomi.py
(+120 files in other folders)
