[tool.poetry]
name = "pfhedge"
version = "0.10.4"
description = "Deep Hedging in PyTorch"
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "MIT"
repository = "https://github.com/pfnet-research/pfhedge"

[tool.poetry.dependencies]
python = "^3.6.13"
torch = "^1.9.0"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^21.4b0"
isort = "^5.7.0"
mypy = "^0.910"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
force_single_line = true
